RedisのストリームをチャンネルID毎に分割
