# packages/server/integration/utils.ts
@@ -1,11 +1,12 @@
 import { Env } from "@/Env";
 import { Redis } from "ioredis";
 
-export async function cleanupRedisStream(env: Env) {
+export async function cleanupRedisStream(env: Env, channelId: string) {
   const client = createRedisClient(env);
-  const t = await client.type(env.redisStreamNameForLine);
+  const streamName = `${env.redisStreamNameForLine}:${channelId}`;
+  const t = await client.type(streamName);
   if (t === "stream") {
-    await client.del(env.redisStreamNameForLine);
+    await client.del(streamName);
   }
 }
 
